Changed packet securitization. Replaced the currently encryption using RSA by using a codec for encode and decode a packet.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .gclient
 *.DS_Store
+*.idea
+src/*.idea
 .gclient_entries
 src/out_ios_x86/*
 src/out_ios_x64/*
@@ -7,3 +9,4 @@ src/out_mac/*
 lib/*
 src/all.ninja.xcodeproj/project.pbxproj
 src/sources_for_indexing.xcodeproj/
+webrtc-ios/**
